--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,7 +18,16 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
 }
+
+main {
+  width: 450px;
+  margin: 140px auto 0; /*push down 140px added since <main> clipped by fixed header*/
+  padding: 2em;
+  background-color: #fff;
+}
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
