--- a/public/styles/posted-tweets.css
+++ b/public/styles/posted-tweets.css
@@ -6,10 +6,13 @@ article.tweet {
   border-radius: 5px;
   margin: 15px 1em;
   overflow: hidden;
+  opacity: 0.8;
 }
 
 article.tweet:hover {
   border-color: #747880;
+  box-shadow: 0px 4px 5px 1px grey;
+  opacity: 1.0;
 }
 
 /*header of tweet*/
@@ -31,7 +34,7 @@ article.tweet:hover > header span {
 }
 
 article.tweet .avatar {
-  background-color: #ffa500;
+  background-color: #179F87;
   border-radius: 4px;
   height: 50px;
   width: 50px;
@@ -72,7 +75,7 @@ article.tweet .timestamp {
 article.tweet .button-icons-area {
   float: right;
   padding-bottom: 3px;
-  color: #ffa500;
+  color: #179F87;
   opacity: 0;
 }
 
